Fix .wrapper layout spacing issues

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ a {
 .subtitle {
     font-size: 1.7em;
     padding: 0 2em 0;
-    margin-bottom: 1em;
+    margin: 1em 0;
 }
 
 .title,
@@ -147,17 +147,18 @@ a:visited .fa-twitter-square {
 
 .wrapper {
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    margin-top: 2em;
-    z-index: 900;
+    align-items: center;
 }
 
-.buttonQuote {
-    display: flex;
-    justify-content: space-between;
-    width: 75%;
-    margin: auto;
+.wrapper h3 {
+    text-align: center;
+}
+
+.fa-twitter-square {
+    margin-right: 3em;
 }
 
 #nextTacoButton {
@@ -168,6 +169,7 @@ a:visited .fa-twitter-square {
     color: white;
     padding: .5em 1em;
     font-size: 1.07em;
+    align-self: flex-end;
 }
 
 #nextTacoButton:active {
@@ -177,7 +179,6 @@ a:visited .fa-twitter-square {
 
 .pContent {
     padding: 0 2em;
-    margin-bottom: 2.5em;
 }
 
 
@@ -188,8 +189,8 @@ a:visited .fa-twitter-square {
 
 #recipeButton {
     display: block;
-    margin: 0 auto 1em;
-    height: 8em;
+    margin: 0 auto;
+    max-height: 8em;
 }
 
 #recipeButton:focus,
@@ -200,6 +201,10 @@ a:visited .fa-twitter-square {
 
 p#tacoP {
     margin: 1.8em 0;
+}
+
+p.tacoFullRecipe {
+    margin-top: 0;
 }
 
 
